syntax = "proto3";

option csharp_namespace = "VoiceAssistant.Server";

package CommandHandling;

import "google/protobuf/wrappers.proto";

service CommandHandler{
	rpc Handle (CommandRequest) returns (stream CommandReply);
}

message CommandRequest{
	google.protobuf.BytesValue audio = 1;
	string user = 2;
}

message CommandReply{
	string command = 1;
}